--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
+
 .App {
-  text-align: center;
+  background-color: #1c2260;
+  flex-direction: row;
+  font-family: 'Roboto';
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+*:focus{
+  outline: none;
 }
 
 @keyframes App-logo-spin {
