Post Tab bar update and State Refactor

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
 
 .App {
-  background-color: #1c2260;
+  background-color: #E7ECEA;
   flex-direction: row;
   font-family: 'Roboto';
 }
