--- a/src/TabPage.css
+++ b/src/TabPage.css
@@ -1,5 +1,5 @@
 .TabPage{
     height: stretch;
-    background-color: #f4f6f8;
+    background-color: #E7ECEA;
     border-radius: 5px 5px 0px 0px;
 }
