First pass of DashBoard and Inv Tabs

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
 
 .App {
-  background-color: #E7ECEA;
+  background-color: #fafafa;
   flex-direction: row;
   font-family: 'Roboto';
   width: 100%;
