--- a/src/css/GraphCard.css
+++ b/src/css/GraphCard.css
@@ -1,18 +1,11 @@
 .graphcard{
     height: 370px;
-    width: fit-content;
     display: flex;
     flex-direction: row;
     flex: 1;
     flex-shrink: 0;
     flex-grow: 0;
     align-items: center;
-
-    background-color: rgb(212, 212, 212);
-    margin-top: 1em;
-    margin-right: .5em;
-    border-radius: 1em;
-    box-shadow: 0px 0px 0.3vw rgb(141, 145, 143);
 }
 
 .label{
@@ -38,4 +31,9 @@
 
 .info:hover{
     background-color: rgb(236, 236, 236);
+}
+
+.pap{
+    margin: 1em;
+    padding-right: 1em;
 }
