--- a/src/css/InventoryTab.css
+++ b/src/css/InventoryTab.css
@@ -1,10 +1,40 @@
 .invtab{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
-    padding-left: .5em;
-    padding-right: .5em;
+    overflow: auto;
+    padding: .5em;
 }
+
+.dashtab{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding: .5em;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(184, 184, 184); 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(150, 150, 150); 
+  }
