--- a/src/css/EmpActivity.css
+++ b/src/css/EmpActivity.css
@@ -1,36 +1,54 @@
-.Activity{
-    height: 370px;
-    width: 50%;
-    display: grid;
-    grid-template-columns: repeat(10, fit-content);
-    grid-template-areas: "RepName Ups Calls Emails Texts Tasks ODue SID LoggedIn";
+.Activity {
+  height: 370px;
+  width: 50%;
+  display: grid;
+  grid-template-columns: repeat(10, fit-content);
+  grid-template-areas: "RepName Ups Calls Emails Texts Tasks ODue SID LoggedIn";
 
-    background-color: rgb(212, 212, 212);
-    margin-top: 1em;
-    margin-right: .5em;
-    border-radius: .3em;
-    box-shadow: 0px 0px 0.3vw rgb(141, 145, 143);
-    padding: 1em;
+  background-color: rgb(212, 212, 212);
+  margin-top: 1em;
+  margin-right: 0.5em;
+  border-radius: 0.3em;
+  box-shadow: 0px 0px 0.3vw rgb(141, 145, 143);
+  padding: 1em;
 }
 
-.cel{
-    margin: 2em;
+.cel {
+  margin: 2em;
 }
 
-.ti{
-    display: flex;
-    justify-content: center;
+.ti {
+  display: flex;
+  justify-content: center;
 }
 
-.pap{
-    padding : 1em;
-    padding-top: 0;
+.pap {
+  padding: 1em;
+  padding-top: 0;
 }
 
-.pip{
-    padding : 1em;
-    padding-top: 0;
-    min-width: 850px;
-    margin: 1em;
+.pip {
+  padding: 1em;
+  padding-top: 0;
+  min-width: 850px;
+  margin: 1em;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.tFields {
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 10em;
+  padding: 1em;
+}
+
+.textFields {
+  width: 1em;
+}
