--- a/src/css/InventoryTab.css
+++ b/src/css/InventoryTab.css
@@ -1,15 +1,16 @@
-.invtab{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    padding: .5em;
+.invtab {
+  background-color: #57c185;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding: 0.5em;
 }
 
-.dashtab{
+.dashtab {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -17,24 +18,24 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: rgb(184, 184, 184); 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(150, 150, 150); 
-  }
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(184, 184, 184);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(150, 150, 150);
+}
