First Pass of Leads, Sneak Peak of Customers, Refactor of Forms & IDs

--- a/src/css/EmpActivity.css
+++ b/src/css/EmpActivity.css
@@ -45,10 +45,17 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  width: 6em;
-  padding: 1em;
+  width: fit-content;
+  max-width: 10em;
+  padding: 0.5em;
 }
 
 .textFields {
   width: 1em;
+}
+
+.button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
